substrate/frame/support/test/tests/runtime_ui/missing_runtime.stderr
error: Missing `#[runtime::runtime]`
  --> tests/runtime_ui/missing_runtime.rs:19:1
   |
19 | mod runtime {}
   | ^^^
